API improvements.